syntax = "proto3";

option java_multiple_files = true;

package ru.rt.killBoss.generated;

message RangeMessage {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message ResponseMessage {
    int32 serverNumber = 1;
}

service RemoteService {
    rpc getValueOfRange(RangeMessage) returns (stream ResponseMessage);
}
